# intentrecognizer

./: CMakeLists.txt  README.md
src/: base.h  check_calendar.h  get_fact.h  get_weather.h  get_weather_city.h  intent_recognizer.h  main.cpp
test/: CMakeLists.txt  test.cpp
